--- a/src/author-works-page.css
+++ b/src/author-works-page.css
@@ -1,15 +1,3 @@
-@media (min-width: 1000px) {
-    .profile-container .form-control {
-        max-width: 24%;
-    }
-}
-
-@media (max-width: 999px) {
-    .profile-container .form-control {
-        max-width: 19%;
-    }
-}
-
 .download-fics-dropdown {
     display: inline-block;
 }
@@ -30,4 +18,36 @@
 
 .download-fics-dropdown__item:not(:last-child) {
     border-bottom: 1px solid gray;
+}
+
+.fanfic-filter .form-inline {
+    display: grid;
+    grid-template-areas:
+            "a a b b c c d e"
+            "f f f f f f f f";
+    gap: 5px;
+}
+
+.fanfic-filter [name="fandom_id"] {
+    grid-area: a;
+}
+
+.fanfic-filter [name="direction"] {
+    grid-area: b;
+}
+
+.fanfic-filter [name="sort"] {
+    grid-area: c;
+}
+
+.fanfic-filter [name="submit"] {
+    grid-area: d;
+}
+
+.fanfic-filter .download-fics-dropdown {
+    grid-area: e;
+}
+
+.fanfic-filter .small {
+    grid-area: f;
 }
